# behavior_tree_fixed

./: README.md
src/BehaviorTree.ROS2/behaviortree_ros2/include/behaviortree_ros2/: bt_action_node.hpp
src/location/: CMakeLists.txt  package.xml
src/location/launch/: map_visualizer_launch.py
src/location/map/: RMUC2025_real.pgm  RMUC2025_real.yaml  RMUC_2024.yaml  map666.pgm  map666.yaml
src/location/scripts/: map_visualizer.py
src/rm_bt/: CMakeLists.txt  package.xml
src/rm_bt/config/: rm_bt_RMUC.xml  rm_bt_RMUC2.xml  rm_bt_RMUL.xml  rm_bt_tree.xml  rm_bt_tree_RMUL.xml  rm_bt_tree_test1.xml  rm_bt_tree_test2.xml  test.xml  test2.xml  test（恢复血量或者弹丸）.xml
src/rm_bt/include/rm_behavior_tree/: bt_conversions.hpp  bt_conversions_StringToInt.hpp
src/rm_bt/include/rm_behavior_tree/plugins/action/: pub_current_area.hpp  pub_current_location.hpp  pub_float.hpp  sub_BothCampHp.hpp  sub_decision_status.hpp  sub_enemy_outpost_status.hpp  sub_game_status.hpp  sub_game_time.hpp  sub_is_detect_enemy.hpp  sub_projectile_number.hpp
src/rm_bt/include/rm_behavior_tree/plugins/condition/: check_detect_enemy.hpp  check_enemy_outpost_die.hpp  check_game_start.hpp  check_time_back.hpp  restores_health.hpp  restores_hp_or_pill.hpp
src/rm_bt/launch/: robomaster_bt_tree.launch.py
src/rm_bt/plugins/action/: pub_current_area.cpp  pub_current_location.cpp  pub_float.cpp  sub_BothCampHp.cpp  sub_decision_status.cpp  sub_enemy_outpost_status.cpp  sub_game_status.cpp  sub_game_time.cpp  sub_is_detect_enemy.cpp  sub_projectile_number.cpp
src/rm_bt/plugins/condition/: check_detect_enemy.cpp  check_enemy_outpost_die.cpp  check_game_start.cpp  check_time_back.cpp  restores_health.cpp  restores_hp_or_pill.cpp
src/rm_bt/src/: rm_bt.cpp
src/rm_sentry_decision_interfaces/: CMakeLists.txt  package.xml
src/rm_sentry_decision_interfaces/msg/: BothCampHp.msg  DetectEnemy.msg
